--- a/modulo01/landing-page-2/index.html
+++ b/modulo01/landing-page-2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Serious Desing & Developement</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
@@ -18,7 +19,7 @@
           intuitive, accessible, and enjoyable for its target audience.
         </p>
       </section>
-      <section>
+      <section id="state-design">        
         <h1>State-of-the-Art Design</h1>
         <article><img src="./images/web-page-01.jpg" /></article>
         <article><img src="./images/web-page-02.jpg" /></article>
