--- a/modulo01/bootstrap_demo_2/index.html
+++ b/modulo01/bootstrap_demo_2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Demo 2</title>
+    <title>Bootstrap Demo 2 - CDN</title>
 
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
