--- a/modulo01/bootstrap_demo_2/index.html
+++ b/modulo01/bootstrap_demo_2/index.html
@@ -16,5 +16,14 @@
     <h1>Main Title</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa minima itaque quia, quod consequatur est? Sunt eum eaque est fuga, qui delectus aut nulla ducimus! Nihil qui aperiam iste fugit.</p>
 
+    <button class='btn btn-primary'>Primary</button>
+    <br><br>
+    <button class='btn btn-secondary btn-sm'>Secondary</button>    
+    <br><br>
+    <button class='btn btn-danger btn-lg'>Danger</button>
+    <br><br>
+    <button class='btn btn-outline-success btn-block'>Success Outline</button>
+    <br><br>
+    <a href="http://www.google.com" class="btn btn-warning">Google!</a>
 </body>
 </html>
