--- a/modulo01/bootstrap_demo_2/index.html
+++ b/modulo01/bootstrap_demo_2/index.html
@@ -15,7 +15,11 @@
 
     <h1>Main Title</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa minima itaque quia, quod consequatur est? Sunt eum eaque est fuga, qui delectus aut nulla ducimus! Nihil qui aperiam iste fugit.</p>
-
+    
+    <div class="alert alert-danger">
+        Este es un mensaje de éxito.
+    </div>
+      
     <button class='btn btn-primary'>Primary</button>
     <br><br>
     <button class='btn btn-secondary btn-sm'>Secondary</button>    
