--- a/modulo02/form01/index.html
+++ b/modulo02/form01/index.html
@@ -10,12 +10,13 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body>
     <div class="container">
         <h3>Formulario muy sencillo</h3>
-        <form action="manejarDatos.php" method="get">
+        <form action="manejarDatos.php" method="get" enctype="multipart/form-data">
             Username:
             <input type="text" name="nombre" value="" size="10" maxlength="7" alt="Entre su nombre"
                 placeholder="XYZ-123" pattern="[A-Z]{3}-[0-9]{3}" required />
@@ -30,11 +31,19 @@
             <input type="checkbox" name="fruta[]" id="guineo" value="banana">
             <label for="guineo">guineo</label>
             <br>
-            <input type="radio" name="genero" id="masculino" value="masculino" />
-            <label for="masculino">Hombre</label>
-            <input type="radio" name="genero" id="femenino" value="femenino" />
-            <label for="femenino">Mujer</label>
+            <fieldset class="border rounded p-2 mt-4 mb-4 d-inline-block">
+                <input type="radio" name="genero" id="masculino" value="masculino" />
+                <label for="masculino">Hombre</label>
+                <input type="radio" name="genero" id="femenino" value="femenino" />
+                <label for="femenino">Mujer</label>
+            </fieldset>
             <br>
+            <input type="file" name="archivo" />
+            <input type="hidden" name="ciudad" name="Arecibo" />
+            <br>
+            <input type="image" name="btnImagen" src="./images/accept.png" style="width:50px;margin:20px 20px 0px;" />
+            <input type="button" class="btn btn-warning" name="options" value="Options" />
+            <input type="reset" class="btn btn-secondary" value="Cancelar" />
             <input type="submit" class="btn btn-primary" value="Enviar" />
         </form>
 
