--- a/modulo02/form01/index.html
+++ b/modulo02/form01/index.html
@@ -37,7 +37,7 @@
                 <input type="checkbox" name="fruta[]" id="guineo" value="banana" class="form-check-input">
                 <label for="guineo" class="form-check-label">guineo</label>
             </fieldset>
-            <fieldset class="border rounded shadow-sm p-2 mt-4 mb-4 d-inline-block">
+            <fieldset class="border rounded shadow-sm p-2 mt-4 mb-4 d-inline-block ">
                 <!-- <legend>Generos</legend> -->
                 <input type="radio" name="genero" id="masculino" value="masculino" class="form-check-input" />
                 <label for="masculino" class="form-check-label">Hombre</label>
@@ -45,9 +45,46 @@
                 <label for="femenino" class="form-check-label">Mujer</label>
             </fieldset>
             <br>
+            <textarea name="address" class="form-control" rows="2" maxlength="150"></textarea>
+            <br>
             <input type="file" name="archivo" class="form-control" />
             <input type="hidden" name="ciudad" name="Arecibo" />
-            <br>
+
+            <hr>
+            <label for="so" class="form-label">Sistema operativo</label> <br />
+            <select class="form-select" id="so" name="so">
+                <option value="" selected="selected" disabled>- selecciona -</option>
+                <option value="windows">Windows</option>
+                <option value="mac">Mac</option>
+                <option value="linux">Linux</option>
+                <option value="otro">Otro</option>
+            </select>
+            <hr>
+            <label for="so" class="form-label">Sistema operativo (multiples CTRL+CLICK)</label> <br />
+            <select class="form-select" id="os" name="os[]" multiple>
+                <option value="windows">Windows</option>
+                <option value="mac">Mac</option>
+                <option value="linux">Linux</option>
+                <option value="otro">Otro</option>
+            </select>
+            <hr>
+            <label for="programa" class="form-label">Programa seleccionado</label> <br />
+            <select class="form-select" id="programa" name="programa" multiple>
+                <optgroup label="Sistemas Operativos">
+                    <option value="Windows" selected="selected">Windows</option>
+                    <option value="Mac">Mac</option>
+                    <option value="Linux">Linux</option>
+                    <option value="Other">Otro</option>
+                </optgroup>
+                <optgroup label="Navegadores">
+                    <option value="Internet	Explorer">Internet Explorer</option>
+                    <option value="Firefox">Firefox</option>
+                    <option value="Safari">Safari</option>
+                    <option value="Opera">Opera</option>
+                    <option value="Other">Otro</option>
+                </optgroup>
+            </select>
+            <hr>
             <input type="image" name="btnImagen" src="./images/accept.png" style="width:50px;margin:20px 20px 0px;" />
             <input type="button" class="btn btn-warning" name="options" value="Options" />
             <input type="reset" class="btn btn-secondary" value="Cancelar" />
