Update javascript code

--- a/modulo03/example04/index.html
+++ b/modulo03/example04/index.html
@@ -17,7 +17,8 @@
         <li>Elemento 2 de la lista</li>
         <li>Elemento 3 de la lista</li>
     </ul>
-    <p>Este es un ejemplo que ilustra cómo se ve el DOM.</p>
+
+    <p id='especial'>Este es un ejemplo que ilustra cómo se ve el DOM.</p>
 
     <script src="./js/codigo.js"></script>
 </body>
